--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "devDependencies": {
         "@types/node": "^20.0.0",
+        "@vercel/node": "^5.5.16",
         "ts-node": "^10.9.0",
         "typescript": "^5.0.0"
     }
