--- a/vercel.json
+++ b/vercel.json
@@ -4,12 +4,20 @@
         {
             "src": "api/webhook.ts",
             "use": "@vercel/node"
+        },
+        {
+            "src": "public/**",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
         {
             "src": "/api/webhook",
             "dest": "/api/webhook.ts"
+        },
+        {
+            "src": "/",
+            "dest": "/public/index.html"
         },
         {
             "src": "/(.*)",
