--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,8 @@
 {
-    "version": 2,
-    "builds": [
+    "rewrites": [
         {
-            "src": "api/webhook.ts",
-            "use": "@vercel/node"
-        },
-        {
-            "src": "public/**",
-            "use": "@vercel/static"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/api/webhook",
-            "dest": "/api/webhook.ts"
-        },
-        {
-            "src": "/",
-            "dest": "/public/index.html"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/public/index.html"
+            "source": "/api/webhook",
+            "destination": "/api/webhook.ts"
         }
     ]
 }
